--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           - July. 2022 - Jan. 2023. AI programming education utilizing challenge-based pair-programming
           - July. 2022 - current. Establishing a world-first medical technology commercialization platform based on K-Leading Tech to secure global competitiveness.
-          - June. 2022 - current. Deciphering traditional records using deep learning for the construction of a virtual Confucian Academy in the metaverse          - Creating, Utilizing, and Augmenting Knowledge Through Conversation with an Artificial Intelligence Agent, Mar. 2022 - Aug. 2024.
+          - June. 2022 - current. Deciphering traditional records using deep learning for the construction of a virtual Confucian Academy in the metaverse          
           - Apr. 2021 – Dec. 2023. Building specialized big data for critical care patients and developing an AI-based Clinical Decision Support System (CDSS)
           - Mar. 2021 – Feb 2023. Artificial Intelligence agent that Generates, Utilizes, and Augments Knowledge Through Conversation 
           - Apr. 2020 - Dec. 2023. Development of AI imaging diagnostic technology for integration into medical devices
