--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ content:
         # sub_title: Integrated Master's & Ph.D in Artificial Intelligence, KNU
         # caption: Dec. 2023 - Current, Prof. Heechul Jung
         description: | # this will include new lines to allow paragraphs
-          -  h.D in Artificial Intelligence, KNU
+          -  Ph.D in Artificial Intelligence, KNU
           - Dec. 2023 – Current, Prof. Heechul Jung
           - Mar. 2021 – Nov. 2023, Prof. Minho Lee
 
@@ -96,12 +96,12 @@ content:
         # caption: Mar. 2015 - Aug. 2020
         description: | # this will include new lines to allow paragraphs
           - B.S. in Electtronic Engineering (Signal Processing), KNU
-          - Mar. 2015 – Feb. 2019,
+          - Mar. 2015 – Feb. 2019
 
   - title: PUBLICATION
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - Joonho Chang, Inchul Choi, & Minho Lee. (2023). PESA R-CNN: Perihematomal Edema Guided Scale Adaptive R-CNN for Hemorrhage Segmentation. (IEEE Journal of Biomedical and Health Informatics, IF:7.7, JCR Top 6%)
+      - **Joonho Chang**, Inchul Choi, & Minho Lee. (2023). PESA R-CNN: Perihematomal Edema Guided Scale Adaptive R-CNN for Hemorrhage Segmentation. (IEEE Journal of Biomedical and Health Informatics, IF:7.7, JCR Top 6%)
       - Changwan Kang, Joonho Chang, & Minho Lee (2023). Convolutional Neural Networks for Predicting Mortality Rate and Length of Stay in Intensive Care Unit Patients with Data Imbalance. (Conference of the Society of Medical Informatics)
       - Joonho Chang & Minho Lee (2023). HMV-GAN: generate hand bone images in multi-view direction (Brain Engineering Society of Korea)
       - Joonho Chang & Minho Lee (2021). Adaptive R-CNN with Center Surround Difference for Hemorrhage Segmentation in CT images (Brain Engineering Society of Korea) 
@@ -125,8 +125,8 @@ content:
   - title: SOFTWARE
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - Mortality prediction model for intensive care unit patients with neurological disorder. (2023) KR Software ASSET_0009888 
-      - Length of Stay prediction model for intensive care unit patients with neurological disorder. (2023) KR Software ASSET_0009889 
+      - Mortality prediction model for intensive care unit patients with neurological disorder. (2023), ASSET_0009888 
+      - Length of Stay prediction model for intensive care unit patients with neurological disorder. (2023), ASSET_0009889 
 
   - title: PROJECTS # Title for the section
     layout: list # Type of content section (list/text)
@@ -137,8 +137,8 @@ content:
         title: National Research Foundation of Korea 
         description: | # this will include new lines to allow paragraphs
           - July. 2022 – Jan. 2023. AI programming education utilizing challenge-based pair-programming
-          - July. 2022 – current. Establishing a world-first medical technology commercialization platform based on K-Leading Tech to secure global competitiveness.
-          - June. 2022 – current. Deciphering traditional records using deep learning for the construction of a virtual Confucian Academy in the metaverse          
+          - July. 2022 – Current. Establishing a world-first medical technology commercialization platform based on K-Leading Tech to secure global competitiveness.
+          - June. 2022 – Current. Deciphering traditional records using deep learning for the construction of a virtual Confucian Academy in the metaverse          
           - Apr. 2021 – Dec. 2023. Building specialized big data for critical care patients and developing an AI-based Clinical Decision Support System (CDSS)
           - Mar. 2021 – Feb 2023. Artificial Intelligence agent that Generates, Utilizes, and Augments Knowledge Through Conversation 
           - Apr. 2020 – Dec. 2023. Development of AI imaging diagnostic technology for integration into medical devices
