--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ content:
   - title: PUBLICATION
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - **Joonho Chang**, `Inchul Choi1`, & Minho Lee. (2023). PESA R-CNN: Perihematomal Edema Guided Scale Adaptive R-CNN for Hemorrhage Segmentation. (IEEE Journal of Biomedical and Health Informatics, IF:7.7, JCR Top 6%)
+      - **Joonho Chang**, Inchul Choi, & Minho Lee. (2023). PESA R-CNN: Perihematomal Edema Guided Scale Adaptive R-CNN for Hemorrhage Segmentation. (IEEE Journal of Biomedical and Health Informatics, IF:7.7, JCR Top 6%)
       - Changwan Kang, **Joonho Chang**, & Minho Lee (2023). Convolutional Neural Networks for Predicting Mortality Rate and Length of Stay in Intensive Care Unit Patients with Data Imbalance. (Conference of the Society of Medical Informatics)
       - **Joonho Chang** & Minho Lee (2023). HMV-GAN: generate hand bone images in multi-view direction (Brain Engineering Society of Korea)
       - **Joonho Chang** & Minho Lee (2021). Adaptive R-CNN with Center Surround Difference for Hemorrhage Segmentation in CT images (Brain Engineering Society of Korea) 
@@ -116,8 +116,8 @@ content:
   - title: DOMESTIC PATENT
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - **Joonho Chang**, Jalali Amin, Minho Lee. Apparatus and method for predicting length of stay and mortality rate of patients in intensive care unit. Granted (2023), 10-2600493-00-00 / Applcation (2023), 10-2023-0036401
-      - **Joonho Chang**, Jalali Amin, Jonghong Kim, Jeongho Hong, & Minho Lee. Patient status analysis system in the intensive care unit based on deep neural network. Granted (2023), 10-2598101-00-00 / Applcation (2022), 10-2022-0078274 
+      - **Joonho Chang**, Jalali Amin, Minho Lee. Apparatus and method for predicting length of stay and mortality rate of patients in intensive care unit. Granted (2023), 10-2600493-00-00 / Application (2023), 10-2023-0036401
+      - **Joonho Chang**, Jalali Amin, Jonghong Kim, Jeongho Hong, & Minho Lee. Patient status analysis system in the intensive care unit based on deep neural network. Granted (2023), 10-2598101-00-00 / Application (2022), 10-2022-0078274 
       - **Joonho Chang** & Minho Lee). Cerebral hemorrhage diagnosis system using deep neural network. Granted(2023), 10-2528727-00-00 / Application (2020), 10-2020-0137614 
       - **Joonho Chang**, Doyoung Kwon, Jinhan Lee, Changuk Oh, Donghyun Kin, & Minho Lee. Apparatus and method for diagnosis of atypical, femur fracture based on artificial intelligence. Application (2024), 10-2024-0012171 
       - **Joonho Chang** & Minho Lee. 3D CT image generation device and method based on Generative Adversarial Network. Application (2023), 10-2023-0188097 
@@ -136,12 +136,12 @@ content:
                       # other value (or no value) means no border will be displayed
         title: National Research Foundation of Korea 
         description: | # this will include new lines to allow paragraphs
-          - July. 2022 – Jan. 2023. AI programming education utilizing challenge-based pair-programming
+          - July. 2022 – Jan. 2023. AI programming education utilizing challenge-based pair-programming.
           - July. 2022 – Current. Establishing a world-first medical technology commercialization platform based on K-Leading Tech to secure global competitiveness.
-          - June. 2022 – Current. Deciphering traditional records using deep learning for the construction of a virtual Confucian Academy in the metaverse          
-          - Apr. 2021 – Dec. 2023. Building specialized big data for critical care patients and developing an AI-based Clinical Decision Support System (CDSS)
-          - Mar. 2021 – Feb 2023. Artificial Intelligence agent that Generates, Utilizes, and Augments Knowledge Through Conversation 
-          - Apr. 2020 – Dec. 2023. Development of AI imaging diagnostic technology for integration into medical devices
+          - June. 2022 – Current. Deciphering traditional records using deep learning for the construction of a virtual Confucian Academy in the metaverse.        
+          - Apr. 2021 – Dec. 2023. Building specialized big data for critical care patients and developing an AI-based Clinical Decision Support System (CDSS).
+          - Mar. 2021 – Feb 2023. Artificial Intelligence agent that Generates, Utilizes, and Augments Knowledge Through Conversation.
+          - Apr. 2020 – Dec. 2023. Development of AI imaging diagnostic technology for integration into medical devices.
           - Nov. 2020 – July. 2021. Recognition and deciphering of traditional record characters using advanced deep learning technology.
           - Jan. 2020 – Mar. 2021. Development of intelligent SW technology for medical data analysis.
           - May. 2019 – Dec. 2020. Research and development of intelligent interaction technology capable of understanding user intent and context.
