--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ content:
         # sub_title: Integrated Master's & Ph.D in Artificial Intelligence
         # caption: Dec. 2023 - Current, Prof. Heechul Jung
         description: | # this will include new lines to allow paragraphs
-          -  Ph.D in Artificial Intelligence, KNU
+          -  Ph.D in Artificial Intelligence
           - Dec. 2023 – Current, Prof. Heechul Jung
           - Mar. 2021 – Nov. 2023, Prof. Minho Lee
 
@@ -95,7 +95,7 @@ content:
         # sub_title: B.S. in Mathematics and Electronic Engineering (Double Major)
         # caption: Mar. 2015 - Aug. 2020
         description: | # this will include new lines to allow paragraphs
-          - B.S. in Electronic Engineering (Signal Processing), KNU
+          - B.S. in Electronic Engineering (Signal Processing)
           - Mar. 2015 – Feb. 2019
 
   - title: PUBLICATION
