--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       - Changuk Oh, Jinhan Lee, **Joonho Chang**, Doyoung Kwon, Joonwoo Kim, Donghyeon Kim, Sungmoon Jeong, Seonjoong Yoon & Jiwan Kim (2024). Artificial intelligence technology for early prediction of the incomplete atypical femoral fracture (KOFS 2024)
-      - **Joonho Chang**, Inchul Choi, & Minho Lee. (2023). PESA R-CNN: Perihematomal Edema Guided Scale Adaptive R-CNN for Hemorrhage Segmentation. (IEEE Journal of Biomedical and Health Informatics, IF:7.7, JCR Top 6%)
+      - **Joonho Chang**, Inchul Choi, & Minho Lee. (2023). PESA R-CNN: Perihematomal Edema Guided Scale Adaptive R-CNN for Hemorrhage Segmentation. (IEEE Journal of Biomedical and Health Informatics, **IF:7.7, JCR Top 6%**)
       - Changwan Kang, **Joonho Chang**, & Minho Lee (2023). Convolutional Neural Networks for Predicting Mortality Rate and Length of Stay in Intensive Care Unit Patients with Data Imbalance. (KOSMI 2023)
       - **Joonho Chang** & Minho Lee (2023). HMV-GAN: generate hand bone images in multi-view direction (BESK 2023)
       - **Joonho Chang** & Minho Lee (2021). Adaptive R-CNN with Center Surround Difference for Hemorrhage Segmentation in CT images (BESK 2021) 
